# SST

./: .gitignore  .gitmodules  CITATION.cff  README.md  pyproject.toml  requirements.txt
code/: sam_utils.py  segment.py  trait_retrieval.py
data/cambridge_butterfly/: README.md
data/neon_beetles/: README.md  demo.py  metadata.json
gui/: pyproject.toml
sam2/utils/: misc.py
segment-anything-2/: .gitignore  LICENSE  README.md  setup.py
segment-anything-2/sam2/: sam2_video_predictor.py
src/sst/: __init__.py  get_mask_from_crop.py  prepare_starter_mask.py  sam_utils.py  segment.py  segment_and_crop.py  segment_and_crop_individual.py
src/sst/GroundingDINO/groundingdino/datasets/: cocogrounding_eval.py  transforms.py
src/sst/GroundingDINO/groundingdino/models/GroundingDINO/: groundingdino.py  ms_deform_attn.py  transformer.py
src/sst/GroundingDINO/groundingdino/models/GroundingDINO/backbone/: backbone.py  position_encoding.py  swin_transformer.py
src/sst/GroundingDINO/groundingdino/util/: inference.py  utils.py
src/sst/sam2_configs/: sam2_hiera_l.yaml
src/sst/segment_anything_2/sam2/: automatic_mask_generator.py  build_sam.py  sam2_image_predictor.py  sam2_video_predictor.py
src/sst/segment_anything_2/sam2/modeling/: memory_attention.py  memory_encoder.py  sam2_base.py
src/sst/segment_anything_2/sam2/modeling/backbones/: hieradet.py
src/sst/segment_anything_2/sam2/modeling/sam/: mask_decoder.py  prompt_encoder.py  transformer.py
src/sst/segment_anything_2/sam2/utils/: misc.py
