[project]
name = "sst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Carlyn", email = "davidecarlyn@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "pycocotools>=2.0.10",
    "supervision>=0.26.1",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.2",
    "yapf>=0.43.0",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
